implemented odometry_calculate.c

--- a/programs/run_path_follower/dox/navigation_idea.dox
+++ b/programs/run_path_follower/dox/navigation_idea.dox
@@ -14,4 +14,9 @@
 
   !!!
 
+  - !!! マッチングしながら走行する方法
+    - !!! 直線のみのデータとのマッチングを行う
+    - !!! 環境データの直線と、地図データの直線とをロボット位置を元にマッチングする
+      - !!! ロボットの位置をマッチング情報を元に更新する
+    - !!! 地図上の経路情報を元に、ロボットを走行させる
 */
