--- a/dox/mainpage.dox
+++ b/dox/mainpage.dox
@@ -60,12 +60,12 @@
           - 円弧追従
           - 指定した直線上で停止
           - !!!
-        - \subpage position_handler_h_page
+        - \subpage position_control_h_page
           - 並進速
             - 指定位置だけ進んで停止
           - 回転速
             - 指定された方向を向いて停止
-        - \subpage velocity_handler_h_page
+        - \subpage velocity_control_h_page
           - 並進速
             - 等加速度から一定速度での走行
           - 回転速
