fixed is_open()'s bug

--- a/dox/robot_ugu.dox
+++ b/dox/robot_ugu.dox
@@ -1,5 +1,19 @@
 /*!
   \page robot_ugu_page UGU (!!! 記述中)
 
+  !!! 写真
+
+  !!! 特徴
+
+  !!! 構成
+
+  !!! 価格
+
+  !!! section 作り方
+
+  - !!! 駆動部
+  - !!! 走行コントローラ
+  - !!! 筐体
+
   !!!
 */
