added Urg_driver::set_timeout_msec() method

--- a/dox/mainpage.dox
+++ b/dox/mainpage.dox
@@ -5,9 +5,8 @@
 
   \section mainpage_what プロジェクトの特徴
 
-  !!! 何のページかを数行で紹介する。 \n
-  !!! ロボットの作り方、使い方、を紹介する。 \n
-  !!! 作成したソフトウェアの実装の説明を行う。 \n
+  これは、ロボット用のアルゴリズムを実装し、実際のロボットで動かすプロジェクトです。実際にロボットで動かすことによって、ロボット用プログラミングの知識が深まることを目標としています。\n
+  また、ロボットを自作する方法も紹介しています。
 
   - <b>特徴</b>
     - !!!
@@ -19,8 +18,10 @@
     - LGPL (!!! リンク)
 
   - <b>ダウンロード</b>
-    - !!! 最新のパッケージ
-    - http://github.com/satofumi/quick_robot_sdk/archives/master (過去のバージョン)
+    - 最新のパッケージ (安定版)
+      - !!! ダウンロードのリンク
+    - 過去のパッケージ
+      - http://github.com/satofumi/quick_robot_sdk/archives/master
 
 
   \section mainpage_startup スタートアップ・ガイド
