added rommba page

--- a/document/dox/mainpage.dox
+++ b/document/dox/mainpage.dox
@@ -1,18 +1,25 @@
 /*!
-  \mainpage 車輪型ロボットとソフトウェアを作るプロジェクト
+  \mainpage ロボット用のソフトウェアを作るプロジェクト
 
-  !!! 作ったロボットの写真
+  !!! ロボットが動作している写真
 
   \section mainpage_what プロジェクトの特徴
 
-  これは、ロボット用のアルゴリズムを実装し、実際のロボットで動かすプロジェクトです。実際にロボットで動かすことによって、ロボット用プログラミングの知識が深まることを目標としています。\n
-  また、ロボットを自作する方法も紹介しています。
+  これは、ロボット用のアルゴリズムを実装し、実際のロボットで動かしてみるプロジェクトです。実際にロボットで動かすことによって、ロボット用プログラミングの知識が深まることを目標としています。\n
+  このプロジェクトで使っているロボットを作成する方法も紹介します。
 
   - <b>特徴</b>
-    - !!!
+    - ロボット用のアルゴリズムを実際に動かして学習できる。
+    - シミュレータを利用したロボット用のプログラム検証が行える。
+    - スクリプトによるコンパイルレスなプログラミングができる。
 
   - <b>依存コンポーネント</b>
-    - !!!
+    - C++
+    - lua
+    - Luabind
+    - SDL
+    - Qt
+    - urg_library
 
   - <b>ライセンス</b>
     - LGPL (<a href="COPYING">plain text</a>)
@@ -44,8 +51,8 @@
 
   \section mainpage_robot ロボットの整備、入手方法
 
-  - ルンバにセンサを搭載して使う
-  - ロボットを自作する
+  - \subpage roomba_robot_page
+  - 自作した移動ロボット
 
 
   \section mainpage_report 連絡先
